# netparse

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
.devcontainer/: devcontainer.json  docker-compose.yml
src/netparse/: db.sqlite3  manage.py
src/netparse/netparse/: asgi.py  settings.py  urls.py  wsgi.py
src/netparse/parser_app/: urls.py  views.py
src/netparse/parser_app/templates/parser_app/: index.html
tests/: tests.py
