[tool.poetry]
name = "netparse"
version = "0.1.0"
description = ""
authors = ["Romario Stani <staniromario@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
Django = "^5.1.1"
django-htmx = "^1.19.0"
textfsm = "^1.1.3"
genie = "^24.9"
pyats = "^24.9"

[tool.poetry.group.dev.dependencies]
isort = "^5.13.2"
pylint = "^3.3.1"
black = "^24.8.0"
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
